overflow fix

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h1 {
     background-color: rgba(255, 0, 0, 0.5);
 
     transition: all 250ms ease-in-out;
-    overflow: auto;
+    overflow-x: auto;
 }
 
 #header:hover {
